<resources>
    <string name="app_name">Moren</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="create_your_account">Create Your Account,</string>
    <string name="sign_up_and_get_started">Sign up and get started</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="moren">Moren</string>
    <string name="day">/ Day</string>
    <string name="available_cars">Available Cars</string>
    <string name="select_date">select date</string>
    <string name="booked_cars">Coming soon cars</string>
    <string name="car_detail">Car Detail</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="booking_date">Booking Date</string>
    <string name="car_merk">Car Merk</string>
    <string name="car_type">Car Type</string>
    <string name="username">Username</string>
    <string name="price">Price</string>
    <string name="book_now">book now</string>
    <string name="my_account">My Account</string>
    <string name="update">update</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="cancel_booking">cancel booking</string>
</resources>